scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/syntax/distinctannotvars/AssrtCoreTest02.scr
module good.extensions.assrtcore.syntax.distinctannotvars.AssrtCoreTest02;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B;
	do Proto2(A, B);
}

aux global protocol Proto2(role A, role B)
{
	2(y:int) from B to A;
}
//*/
